syntax = "proto3";

package protobuff;

option go_package = "github.com/whattheearl/fig/profilesvc/protobuff";

message ProfileIdRequest {
  string  id = 1;
}

message ProfileEmailRequest {
  string  email = 1;
}

message ProfileUsernameRequest {
  string  username = 1;
}

message ProfileResponse {
  string  id = 1;
  string  name = 2;
  string  username = 3;
  string  summary = 4;
  string  email = 5;
}

service ProfileService {
  rpc GetById(ProfileIdRequest) returns (ProfileResponse);
  rpc GetByUsername(ProfileUsernameRequest) returns (ProfileResponse);
  rpc GetByEmail(ProfileEmailRequest) returns (ProfileResponse);
}